<resources>
    <string name="error">ERROR&#8230;</string>
    <string name="pref_zoomctrl_summary">Position of buttons on the screen</string>
    <string name="pref_zoomctrl">Zoom buttons</string>
    <string name="pref_screen_orientation">Screen Orientation</string>
    <string name="pref_screen_orientation_summary">Choose the screen orientation</string>
    <string name="pref_googlelanguagecode_summary">Localisation of Google Map</string>
    <string name="pref_googlelanguagecode">Google Map language code</string>
    <string name="pref_hidepoi_summary">Dont show POI icons on the map</string>
    <string name="pref_hidepoi">Hide POI</string>
    <string name="prefcat_main_poi">POI</string>
    <string name="pref_northdirectionup_summary">Turn map on the northern direction</string>
    <string name="pref_northdirectionup">Direction on the North</string>
    <string name="pref_drivingdirectionup_summary">Turn the map in driving direction</string>
    <string name="pref_drivingdirectionup">Driving direction up</string>
    <string name="pref_zoomminlevel_summary">Set this zoom level at long press on minus button</string>
    <string name="pref_zoomminlevel">Favourite min zoom</string>
    <string name="pref_zoommaxlevel_summary">Set this zoom level at long press on plus button</string>
    <string name="pref_zoommaxlevel">Favourite max zoom</string>
    <string name="prefcat_main_misc">Misc</string>
    <string name="pref_accuracy_summary">Show blue disk indicator like Google Map</string>
    <string name="pref_accuracy">Accuracy indicator</string>
    <string name="pref_keepscreenon_summaryoff">Screen will be automatically turned off in case of inactivity</string>
    <string name="pref_keepscreenon_summary">Screen will not be turned off while you see map</string>
    <string name="pref_keepscreenon">Keep the screen on</string>
    <string name="pref_showtitle_summary">Hide window title with map name and etc</string>
    <string name="pref_showtitle">Show window title</string>
    <string name="pref_showstatusbar_summary">Hide status bar in map mode</string>
    <string name="pref_showstatusbar">Show status bar</string>
    <string name="pref_turnoffautoreindex">Switch off auto reindexing</string>
    <string name="pref_turnoffautoreindex_summary">Switch off check of the size and datetime map files</string>
    <string name="pref_gpsfastupdate">Fast update GPS data</string>
    <string name="pref_gpsfastupdate_summary">Slow updating saves the battery theoretically</string>
    <string name="pref_usermap_enabled">Enabled map</string>
    <string name="pref_usermap_enabled_summary">Add map to maps list</string>
    <string name="pref_usermap_name">Name</string>
    <string name="pref_usermap_baseurl">Base URL</string>
    <string name="pref_usermap_projection">Projection</string>
    <string name="pref_usermap_traffic">Yandex.Traffic</string>
    <string name="pref_usermap_traffic_summary">Show traffic info by Yandex</string>
    <string name="prefcat_main_look">Look &amp; Feel</string>
    <string name="prefcat_main_maps">Maps</string>
    <string name="prefcat_main_indexing">Indexing</string>
    <string name="pref_main_maps">Predefined Maps</string>
    <string name="pref_main_maps_summary">Internet connection is required</string>
    <string name="pref_main_usermaps">User defined maps</string>
    <string name="pref_main_usermaps_summary">Maps from /sdcard/rmaps/maps</string>
    <string name="prefcat_main_predefinedmaps">Maps</string>
    <string name="prefcat_main_predefinedoverlays">Overlays</string>
    <string name="btn_clear_cache_title">Clear cache</string>
    <string name="pref_internalcache_title">Internal cache</string>
    <string name="pref_internalcache_summary">Used for temp storage map tiles. Size: %dKB/4MB</string>
    <string name="pref_index_title">Index database</string>
    <string name="pref_index_summary">Tiles index of offline maps. Size: %dKB</string>
    <string name="pref_showscalebar_summary">Show scale bar at left bottom corner</string>
    <string name="pref_showscalebar">Show scale bar</string>
    <string name="pref_units_summary">Distance, speed units</string>
    <string name="pref_units">Units</string>
    <string name="pref_onlinecacheclear">Online cache</string>
    <string name="pref_onlinecacheclear_summary">.sqlitedb* Size: %dKB</string>
    <string name="pref_googlescale">Tiles size factor</string>
    <string name="pref_googlescale_summary">Get enlarged tiles from Google. It is recommended to clear the cache after changing the parameter</string>
    <string name="pref_locale">UI Language</string>
    <string name="pref_locale_summary">UI language independent of system setting</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_mylocation">My location</string>
    <string name="menu_mapselector">Maps</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_addpoi">Add POI</string>
    <string name="menu_poilist">POI</string>
    <string name="menu_categorylist">Category</string>
    <string name="menu_import">Import</string>
    <string name="menu_deleteall">Delete All</string>
    <string name="menu_area_selector">Make available offline</string>
    <string name="no_traffic">On this zoom traffic info are unavailable</string>
    <string name="auto_follow_enabled">Auto-Follow Enabled</string>
    <string name="auto_follow_disabled">Auto-Follow Disabled</string>
    <string name="message_geodata_notavailable">Data on SD card is not available. Operation cannot be performed.</string>
    <string name="no_inet_conn">No internet connection&#8230;</string>
    <string name="no_items">Your search did not match any items</string>
    <string name="about_dialog_text">©2009 Robert.Developer\n
  Osmdroid by Nicolas Gramlich\n
  App icon by Everaldo Coelho\n
With the assistance of\n
  Dmytro Sandu\n
  Snake Joe\n
  Christoffer Blindheim\n
Translators\n
  Vitek Fedra CZ\n
  Blast IT\n
  Mike DE\n
All rights reserved\n
\n
Questions, sentences mail to robertk506@gmail.com\n
\n
How to and FAQ you can find on http://robertdeveloper.blogspot.com/\n</string>
    <string name="about_dialog_whats_new">What\'s new&#8230;</string>
    <string name="about_dialog_close">Close</string>
    <string name="search_label">Address:</string>
    <string name="search_hint">e.g. Abbey Road, London</string>
    <string name="message_gpsdisabled">GPS is disabled. Trying to use wireless network to determine your location&#8230;</string>
    <string name="message_locationunavailable">GPS and Network detection is disabled. Your current location is temporarily unavailable&#8230;</string>
    <string name="message_lastknownlocation">GPS and Network detection is disabled. Showing last known location&#8230;</string>
    <string name="message_corruptindex">You have corrupt index data. I recommend to clear index data in settings.</string>
    <string name="message_updateminmax">Update min max zoom data of map file&#8230;</string>
    <string name="message_saved">Item saved</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Revert</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_show">Show</string>
    <string name="PoiTitle">Title</string>
    <string name="PoiIcon">Icon</string>
    <string name="PoiCategoryTitle">Category</string>
    <string name="PoiLat">Latitude</string>
    <string name="PoiLon">Longitude</string>
    <string name="PoiDescr">Description</string>
    <string name="hidden">Hidden</string>
    <string name="hiddencategory">Hide POI of this category</string>
    <string name="menu_goto">Go to POI</string>
    <string name="FileName">Import from KML, GPX file</string>
    <string name="ToCategory">To category</string>
    <string name="SelectFile">Select file</string>
    <string name="Import">Import</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="MinZoom">Show poi since the zoom (0..23)</string>
    <string name="warning_delete_all_poi">Are you sure you want to delete all poi?</string>
    <string name="menu_tracks">Tracks</string>
    <string name="remote_service_started">RMaps track writer</string>
    <string name="menu_goto_track">Go to Track</string>
    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_stop">Stop</string>
    <string name="trackwriter_nothing">Nothing to save</string>
    <string name="trackwriter_saved">Track saved</string>
    <string name="pref_trackwriter_mindistance_summary">Smallest distance between two recordings of your position</string>
    <string name="pref_trackwriter_mindistance">Min distance between points</string>
    <string name="pref_trackwriter_mintime_summary">Smallest time interval between two recordings of your position</string>
    <string name="pref_trackwriter_mintime">Min time between points</string>
    <string name="prefcat_main_trackwriter">Track writer</string>
    <string name="menu_toradar">To Radar</string>
    <string name="message_noradar">Radar application not found. Please install it! You can install GPS Status or Radar from the Market.</string>
    <string name="message_nogpsstatus">GPS Status not found. Please install it!</string>
    <string name="menu_exporttogpx">Export to GPX file</string>
    <string name="menu_exporttokml">Export to KML file</string>
    <string name="message_trackexported">The track is exported to </string>
    <string name="message_cantstarttrackwriter">Can\'t start TrackWriter because can\'t write track to </string>
    <string name="message_error">Error: %s</string>
    <string name="error_title">Error report</string>
    <string name="error_text">After the last start the software problem has forced RMaps to be closed unexpectedly. Please, send the error report to the author of the program. Click Generate report, you can read the message before it is sent.</string>
    <string name="error_send">Generate report</string>
    <string name="pref_onlinecache">Online maps cache</string>
    <string name="pref_onlinecache_summary">Store online maps tiles to sdcard</string>
    <string name="message_wait">Wait a moment, please&#8230;</string>
    <string name="pref_dir">Directories</string>
    <string name="pref_dir_main">Main RMaps directory</string>
    <string name="pref_dir_maps">User maps directory</string>
    <string name="pref_dir_import">Import files directory</string>
    <string name="pref_dir_export">Export files directory</string>
    <string name="pref_dir_summary">Where RMaps stores your files</string>
    <string name="pref_crosshair">Crosshair on centre</string>
    <string name="pref_crosshair_summary">Show litle crosshair on centre of the map</string>
    <string name="points_cnt">POINTS</string>
    <string name="duration">DURATION</string>
    <string name="distance">DISTANCE</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="avg_pace">AVG PACE</string>
    <string name="max_speed">MAX SPEED</string>
    <string name="moving_time">MOVING TIME</string>
    <string name="avg_moving_speed">AVG MOVING SPEED</string>
    <string name="clear">Clear</string>
    <string name="offset_button_open_map">Set offset on the map</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_reload">Reload screen tiles</string>
    <string name="menu_findthemap">Find the map</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_downloadprepared">Download maps prepared</string>
    <string name="menu_show_dashboard">Dashboard</string>
    <string name="menu_routes">Routes</string>
</resources>